cpp alternative for python bindings by claude

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,10 @@ build/
 # To avoid that /tools/build is ignored
 !/tools/*
 
+# Standalone C++ build directory and files
+build_standalone/
+tests/test_main_template.cpp
+
 **/*.o
 **/*.cmd
 **/*.a
